--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV & Projects - Nguyễn Văn A</title>
+    <title>CV & Projects-Nguyễn Hải Dương</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -67,3 +67,4 @@
     </footer>
 </body>
 </html>
+
